--- a/src/herbie/HerbieUI.css
+++ b/src/herbie/HerbieUI.css
@@ -178,7 +178,7 @@ input[type="text"]:focus, select:focus {
   font-size: 11px;
   background-color: var(--foreground-color);
   color: var(--background-color);
-  padding: 10px 27px;
+  padding: 10px 25px;
 
   a {
     color: var(--background-color);
@@ -252,7 +252,7 @@ input[type="text"]:focus, select:focus {
 
 .grid-container > .visualizations {
   grid-area: visualizations; /* Place the visualization section in the "visualizations" grid area */
-  margin-left: 10px;
+  margin-left: 25px;
   box-shadow: 3px 0 8px rgba(0, 0, 0, 0.07);
   display: flex;
   flex-direction: column;
@@ -320,7 +320,7 @@ a.action:focus {
   display: grid;
   grid-template-columns: 1fr auto 1fr; /* Three columns: flexible space, center item, flexible space */
   align-items: center; /* Center items vertically */
-  padding: 10px 27px;
+  padding: 10px 25px;
   font-size: 20px;
   background-color: var(--background-color);
   color: var(--foreground-color);
